# gpuchat

./: BUILD.bazel  MODULE.bazel  bot_core.cc  bot_core.h  chatbot_lib.h  chatbot_lib.hpp  main.cc  main.cpp  wyoming_lib.hpp
tests/: BUILD.bazel  test_chatbot.cc  test_chatbot.cpp  test_e2e_sip.cc  test_sip_e2e.cpp
