load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# ── Shared header-only library ────────────────────────────────────────────────

cc_library(
    name = "chatbot_lib",
    hdrs = ["chatbot_lib.hpp"],
    visibility = ["//visibility:public"],
)

# ── Wyoming protocol client library ──────────────────────────────────────────
# Network-I/O layer: Wyoming TCP helpers + WyomingTranscribe / WyomingSynthesize.
# Depends on chatbot_lib for kAudioRate, JsonGetString, JsonEscape.

cc_library(
    name = "wyoming_lib",
    hdrs = ["wyoming_lib.hpp"],
    deps = [":chatbot_lib"],
    visibility = ["//visibility:public"],
)

# ── sloperator binary ────────────────────────────────────────────────────────

cc_binary(
    name = "sloperator",
    srcs = ["main.cpp"],
    linkopts = [
        "-ldl",
        "-lpthread",
        "-lm",
        "-lrt",
        "-static-libstdc++",
        "-static-libgcc",
        # gold with --start-lib treats :silk as a lazy archive, so silk_x86_rtcd's
        # references to silk_NSQ_c etc. are unresolved when the SIMD .o files are
        # processed.  Force-include the symbols that silk_x86_rtcd needs so gold
        # pulls in the silk objects before the SIMD files are processed.
        "-Wl,-u,silk_NSQ_c",
        "-Wl,-u,silk_NSQ_del_dec_c",
        "-Wl,-u,silk_VQ_WMat_EC_c",
        "-Wl,-u,silk_noise_shape_quantizer",
        "-Wl,-u,silk_inner_product_FLP_c",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":chatbot_lib",
        ":wyoming_lib",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@cpp-httplib//:httplib",
        "@nlohmann_json//:json",
        "@pjsip",
        "@yaml-cpp//:yaml-cpp",
    ],
)

# ── OCI container image ───────────────────────────────────────────────────────

pkg_tar(
    name = "sloperator_layer",
    srcs = [":sloperator"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "image",
    base = "@distroless_cc",
    entrypoint = ["/usr/local/bin/sloperator"],
    exposed_ports = ["5060/udp"],
    tars = [":sloperator_layer"],
)

# Use --@//:repository=ghcr.io/owner/repo to override at push time.
oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/placeholder",
)
